improved effect conduit recipe